force-app/main/default/objects/Account/fields/Account_City__c.field-meta.xml
<CustomField>
    <fullName>Account_City__c</fullName>
    <label>Broadcaster City</label>
    <length>32</length>
    <type>Text</type>
</CustomField>