force-app/main/default/objects/Account/fields/Account_State__c.field-meta.xml
<CustomField>
    <fullName>Account_State__c</fullName>
    <label>Broadcaster State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>