force-app/main/default/objects/Account/fields/Actual_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Date__c</fullName>
    <description>Date the station is confirmed off air.</description>
    <label>Actual Off 600Mhz Date (Repacked)</label>
    <type>Date</type>
</CustomField>