force-app/main/default/objects/Account/fields/Actual_Off_660_Date_Blank_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Actual_Off_660_Date_Blank_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for filtering dates, hidden from page layout to avoid confusion, but useful in reporting.</description>
    <inlineHelpText>Used for filtering dates- Blank checkbox means station is OFF AIR. Checked box means station is on air. (True or false. Default state is checked).</inlineHelpText>
    <label>Actual Off 600 Date Checkbox (✓=on air)</label>
    <type>Checkbox</type>
</CustomField>