force-app/main/default/objects/Account/fields/Adjusted_ERP__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_ERP__c</fullName>
    <label>Adjusted ERP per broadcaster</label>
    <length>255</length>
    <type>Text</type>
</CustomField>