force-app/main/default/objects/Account/fields/Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Date__c</fullName>
    <inlineHelpText>Station off air date/interference agreement as per a contractual  agreement  with T-Mobile. Auto-Filled from Broadcaster Deal field when updated.</inlineHelpText>
    <label>Off Air Agreement Date</label>
    <type>Date</type>
</CustomField>