force-app/main/default/objects/Account/fields/Agreement_Discussion__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Discussion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agreement Discussion</label>
    <type>Checkbox</type>
</CustomField>