force-app/main/default/objects/Account/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <inlineHelpText>Type of agreement with the broadcaster.  Auto filled from the Broadcaster Deal.</inlineHelpText>
    <label>Agreement Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>