force-app/main/default/objects/Account/fields/All_Equipment_Received__c.field-meta.xml
<CustomField>
    <fullName>All_Equipment_Received__c</fullName>
    <inlineHelpText>Has Station received all required new broadcast equipment (antenna, transmitter, etc.) necessary to begin construction?</inlineHelpText>
    <label>All Equipment Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>