force-app/main/default/objects/Account/fields/All_Required_Equipment_Anticipated__c.field-meta.xml
<CustomField>
    <fullName>All_Required_Equipment_Anticipated__c</fullName>
    <description>Maps to LMS field &quot;equipment_in_time_ind&quot;</description>
    <inlineHelpText>Does the Station anticipate that it will receive all necessary equipment in time to meet the construction deadline for the Station’s main facility?</inlineHelpText>
    <label>All Required Equipment Anticipated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>