force-app/main/default/objects/Account/fields/All_Tower_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Tower_Work_Completed__c</fullName>
    <label>All Tower Work Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>