force-app/main/default/objects/Account/fields/All_Work_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_Work_Completed__c</fullName>
    <inlineHelpText>Has the Station completed all work, including construction, modification and/or installation, related to construction of its post-auction facility such that it is ready to begin testing on its post-auction facility?</inlineHelpText>
    <label>All Work Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>