force-app/main/default/objects/Account/fields/Antenna_Make_Mode__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Make_Mode__c</fullName>
    <label>Antenna Make Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>