force-app/main/default/objects/Account/fields/Antenna_MFG__c.field-meta.xml
<CustomField>
    <fullName>Antenna_MFG__c</fullName>
    <inlineHelpText>Please select the Antenna manufacturer, if they are not in the list, you can add them.</inlineHelpText>
    <label>Antenna MFG</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alive</fullName>
            </value>
            <value>
                <fullName>Dielectric</fullName>
            </value>
            <value>
                <fullName>ERI</fullName>
            </value>
            <value>
                <fullName>Jampro</fullName>
            </value>
            <value>
                <fullName>Kathrein</fullName>
            </value>
            <value>
                <fullName>RFS</fullName>
            </value>
            <value>
                <fullName>SWR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>