force-app/main/default/objects/Account/fields/Antenna_Polarization__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Polarization__c</fullName>
    <label>Antenna Polarization</label>
    <length>64</length>
    <type>Text</type>
</CustomField>