force-app/main/default/objects/Account/fields/Antenna_Type__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Type__c</fullName>
    <label>Antenna Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>