force-app/main/default/objects/Account/fields/Ask_About_Federal_Land__c.field-meta.xml
<CustomField>
    <fullName>Ask_About_Federal_Land__c</fullName>
    <formula>IF((Federal_Land_TV_Stations__c = TRUE)&amp;&amp;( Follow_Up_Complete_Fed_Land__c = False), IMAGE(&quot;https://c.na59.visual.force.com/resource/1553638766000/GraphicsPackNew/fatcow/farmfresh/16/exclamation.png&quot;, &quot;Magenta&quot;,10,15),Null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>When this field is Magenta, please follow up regarding federal land/TV stations.</inlineHelpText>
    <label>Ask About Federal Land</label>
    <type>Text</type>
</CustomField>