force-app/main/default/objects/Account/fields/Auction_Winner__c.field-meta.xml
<CustomField>
    <fullName>Auction_Winner__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>A Station that won during the Spectrum Auction.  Auto populated from the Broadcaster Deal when the field is updated.</inlineHelpText>
    <label>Auction Winner</label>
    <type>Checkbox</type>
</CustomField>