force-app/main/default/objects/Account/fields/Auction_Winner_Plan__c.field-meta.xml
<CustomField>
    <fullName>Auction_Winner_Plan__c</fullName>
    <label>Auction Winner Plan</label>
    <length>64</length>
    <type>Text</type>
</CustomField>