force-app/main/default/objects/Account/fields/Audit_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Audit_Expiration_Date__c</fullName>
    <inlineHelpText>Enter expiration date here to clear the audit flag (if audits are not attached before it expires. If date is passed, flag will clear automatically).</inlineHelpText>
    <label>Audit Flag Expiration Date</label>
    <type>Date</type>
</CustomField>