force-app/main/default/objects/Account/fields/Audit_Flag__c.field-meta.xml
<CustomField>
    <fullName>Audit_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Audit Flag</label>
    <type>Checkbox</type>
</CustomField>