force-app/main/default/objects/Account/fields/Audit_Quantity_Needed__c.field-meta.xml
<CustomField>
    <fullName>Audit_Quantity_Needed__c</fullName>
    <label>Audit Quantity Needed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>