force-app/main/default/objects/Account/fields/Aux_Antenna_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Aux_Antenna_Ordered__c</fullName>
    <inlineHelpText>The Station has placed orders for the following equipment, if required: Auxiliary antenna and related equipment</inlineHelpText>
    <label>Aux Antenna Ordered</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>