force-app/main/default/objects/Account/fields/Aux_Antenna_Required__c.field-meta.xml
<CustomField>
    <fullName>Aux_Antenna_Required__c</fullName>
    <inlineHelpText>Does the Station require use of a new auxiliary antenna system?</inlineHelpText>
    <label>Aux Antenna Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>