force-app/main/default/objects/Account/fields/Aux_Antenna_Test_Complete__c.field-meta.xml
<CustomField>
    <fullName>Aux_Antenna_Test_Complete__c</fullName>
    <inlineHelpText>Has the Station completed all testing on its new auxiliary antenna system such that it may now cease broadcasting on its pre-auction channel?</inlineHelpText>
    <label>Aux Antenna Test Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>