force-app/main/default/objects/Account/fields/Aux_Antenna_Test_Started__c.field-meta.xml
<CustomField>
    <fullName>Aux_Antenna_Test_Started__c</fullName>
    <inlineHelpText>Has the Station started testing on its new auxiliary antenna system?</inlineHelpText>
    <label>Aux Antenna Test Started</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>