force-app/main/default/objects/Account/fields/Aux_Antenna_Tower_Started__c.field-meta.xml
<CustomField>
    <fullName>Aux_Antenna_Tower_Started__c</fullName>
    <inlineHelpText>Has the Station started all outside tower work and made all necessary equipment upgrades to commence testing of its new auxiliary antenna system?</inlineHelpText>
    <label>Aux Antenna Tower Started</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>