force-app/main/default/objects/Account/fields/Avetta_Id__c.field-meta.xml
<CustomField>
    <fullName>Avetta_Id__c</fullName>
    <label>Avetta Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>