force-app/main/default/objects/Account/fields/BAS_License_Key__c.field-meta.xml
<CustomField>
    <fullName>BAS_License_Key__c</fullName>
    <inlineHelpText>Used to identify record in ULS</inlineHelpText>
    <label>BAS License Key</label>
    <length>32</length>
    <type>Text</type>
</CustomField>