force-app/main/default/objects/Account/fields/BAS_Notification_created__c.field-meta.xml
<CustomField>
    <fullName>BAS_Notification_created__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used to signify when a BAS Broadcaster has an attached notification/has been notified. will be checked when there is a BAS  notification.</inlineHelpText>
    <label>BAS Notification created</label>
    <type>Checkbox</type>
</CustomField>