force-app/main/default/objects/Account/fields/BAS_Operating_Type__c.field-meta.xml
<CustomField>
    <fullName>BAS_Operating_Type__c</fullName>
    <label>BAS Operating Type</label>
    <length>64</length>
    <type>Text</type>
</CustomField>