force-app/main/default/objects/Account/fields/BAS_Station_Class__c.field-meta.xml
<CustomField>
    <fullName>BAS_Station_Class__c</fullName>
    <label>BAS Station Class</label>
    <length>64</length>
    <type>Text</type>
</CustomField>