force-app/main/default/objects/Account/fields/Broadcaster_Deal_ID__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Deal_ID__c</fullName>
    <inlineHelpText>Used to hold the Broadcaster Deal ID to support processes.</inlineHelpText>
    <label>Broadcaster Deal ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>