force-app/main/default/objects/Account/fields/Broadcaster_Risk_FCC_Filings__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Risk_FCC_Filings__c</fullName>
    <inlineHelpText>Select the risk the Broadcaster will not meet it&apos;s phase completion date| Normal (Green) no additional risks |Mod/Sev- small delays/crew| Urgent/Critical- Very likely delay days/weeks| Critical will be missed w/out help- delay 1 month +| View RiskRating ^</inlineHelpText>
    <label>Broadcaster Risk (FCC Filings)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>