force-app/main/default/objects/Account/fields/Broadcaster_Risk_Hidden_PriorValue_Field__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Risk_Hidden_PriorValue_Field__c</fullName>
    <inlineHelpText>Populated when broadcaster risk changes- hidden, but used for email alerts (PB updates).</inlineHelpText>
    <label>Broadcaster Risk Hidden PriorValue Field</label>
    <length>16</length>
    <type>Text</type>
</CustomField>