force-app/main/default/objects/Account/fields/Broadcaster_Risk_Manage_Manually__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Risk_Manage_Manually__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to disable all Broadcaster Risk automation. The Broadcaster Risk (Select) must be used to change the Broadcaster Risk (Overall).</inlineHelpText>
    <label>Broadcaster Risk (Manage Manually)</label>
    <type>Checkbox</type>
</CustomField>