force-app/main/default/objects/Account/fields/Broadcaster_Risk_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Risk_Outreach__c</fullName>
    <inlineHelpText>Select the risk level that the station will not make it&apos;s phase completion date.</inlineHelpText>
    <label>Broadcaster Risk (Outreach)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Urgent</fullName>
            </value>
            <value>
                <fullName>Critical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>