force-app/main/default/objects/Account/fields/Broadcaster_Risk_Overall_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Risk_Overall_Hidden__c</fullName>
    <inlineHelpText>Hidden field for processes to update and manage settings for the visible version.</inlineHelpText>
    <label>Broadcaster Risk (Hidden)</label>
    <length>32</length>
    <type>Text</type>
</CustomField>