force-app/main/default/objects/Account/fields/Broadcaster_Warning__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Warning__c</fullName>
    <inlineHelpText>This field will be populated when the Broadcaster Warning Checkbox is selected.</inlineHelpText>
    <label>Broadcaster Warning</label>
    <type>TextArea</type>
</CustomField>