force-app/main/default/objects/Account/fields/Broadcaster_Warning_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Broadcaster_Warning_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if notes should be reviewed prior to contacting this broadcaster.</inlineHelpText>
    <label>Broadcaster Warning Checkbox</label>
    <type>Checkbox</type>
</CustomField>