force-app/main/default/objects/Account/fields/Call_Sign__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign__c</fullName>
    <inlineHelpText>Original Call Sign</inlineHelpText>
    <label>Call Sign</label>
    <length>32</length>
    <type>Text</type>
</CustomField>