force-app/main/default/objects/Account/fields/Call_Sign_City_State_Channels__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign_City_State_Channels__c</fullName>
    <formula>Name  &amp;&quot; / &quot; &amp; Account_City__c &amp;&quot;, &quot; &amp; Account_State__c &amp; &quot; /Channel - &quot; &amp; TEXT(Channel__c) &amp;&quot; / &quot;&amp;&quot;New Channel - &quot; &amp;  Text(New_Channel__c)&amp; &quot; /&quot; &amp; &quot;Phase - &quot; &amp;     Dashboard_Repack_Phase_Admin__c  &amp; &quot; / &quot; &amp;  Parent.Name</formula>
    <label>Fac ID /City / State / Channels/ Owner</label>
    <type>Text</type>
</CustomField>