force-app/main/default/objects/Account/fields/Call_Sign_Current__c.field-meta.xml
<CustomField>
    <fullName>Call_Sign_Current__c</fullName>
    <inlineHelpText>Current Call Sign for the Station.  Updated from LMS</inlineHelpText>
    <label>Call Sign (Current)</label>
    <length>16</length>
    <type>Text</type>
</CustomField>