force-app/main/default/objects/Account/fields/Case_Status__c.field-meta.xml
<CustomField>
    <fullName>Case_Status__c</fullName>
    <description>Case Status for Broadcasters at risk</description>
    <inlineHelpText>Shows the status of the related Case for Broadcaster at Risk</inlineHelpText>
    <label>Case Status</label>
    <length>64</length>
    <type>Text</type>
</CustomField>