force-app/main/default/objects/Account/fields/Ceased_Broadcasting_Old_Channel__c.field-meta.xml
<CustomField>
    <fullName>Ceased_Broadcasting_Old_Channel__c</fullName>
    <description>Maps to &quot;ceased_broadcasting_ind&quot;</description>
    <inlineHelpText>Has the Station ceased broadcasting on its pre-auction channel?</inlineHelpText>
    <label>Ceased Broadcasting Old Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>