force-app/main/default/objects/Account/fields/Cell_Site_Landlord__c.field-meta.xml
<CustomField>
    <fullName>Cell_Site_Landlord__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cell Site Landlord</label>
    <type>Checkbox</type>
</CustomField>