force-app/main/default/objects/Account/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <inlineHelpText>Original Channel that station was on.</inlineHelpText>
    <label>Channel</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>