force-app/main/default/objects/Account/fields/Commencement_Date__c.field-meta.xml
<CustomField>
    <fullName>Commencement_Date__c</fullName>
    <inlineHelpText>Date LP station required to be off air to avoid interference with T-Mobile service.  Date set by T-Mobile via LPTV Notification process.  Note - stations may be re-notified that the day has moved out and this field will reflect the later date.</inlineHelpText>
    <label>Commencement Date</label>
    <type>Date</type>
</CustomField>