force-app/main/default/objects/Account/fields/Comments_for_Fed_Land_TV_Stations__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_Fed_Land_TV_Stations__c</fullName>
    <inlineHelpText>Please update this field with follow up information regarding Federal Land outreach.</inlineHelpText>
    <label>Comments for Fed. Land (TV Stations)</label>
    <type>TextArea</type>
</CustomField>