force-app/main/default/objects/Account/fields/Completed_Audits__c.field-meta.xml
<CustomField>
    <fullName>Completed_Audits__c</fullName>
    <label>Completed Audits</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>