force-app/main/default/objects/Account/fields/Concurrent_Operations_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Concurrent_Operations_End_Date__c</fullName>
    <inlineHelpText>T-Mobile has agreed to allow the station to operate concurrently past the Commencement date until this date.</inlineHelpText>
    <label>Concurrent Operations End Date</label>
    <type>Date</type>
</CustomField>