force-app/main/default/objects/Account/fields/Construction_Completed__c.field-meta.xml
<CustomField>
    <fullName>Construction_Completed__c</fullName>
    <inlineHelpText>Has the Station completed all construction work on its post-auction facility that is necessary to complete an application for a license to cover that facility?</inlineHelpText>
    <label>Construction Completed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>