force-app/main/default/objects/Account/fields/Contact_Address_Last_Line_CASS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Last_Line_CASS__c</fullName>
    <inlineHelpText>Contact address, City, State and Zip from LMS corrected via CASS verification process.</inlineHelpText>
    <label>Contact Address Last Line CASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>