force-app/main/default/objects/Account/fields/Contact_Bad_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Bad_Address__c</fullName>
    <inlineHelpText>LMS Address status after processing by CASS address verification system.  Code indicates either no error or the type of error found.</inlineHelpText>
    <label>Contact Bad Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>