force-app/main/default/objects/Account/fields/Contact_Street_2_CASS__c.field-meta.xml
<CustomField>
    <fullName>Contact_Street_2_CASS__c</fullName>
    <inlineHelpText>Contact address from LMS corrected via CASS verification process.</inlineHelpText>
    <label>Contact Street 2 CASS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>