force-app/main/default/objects/Account/fields/Contour_Map_Broadcaster__c.field-meta.xml
<CustomField>
    <fullName>Contour_Map_Broadcaster__c</fullName>
    <formula>IF( License_to_Cover_Filing_Number__c = NULL, &quot;No Link&quot;, 
HYPERLINK(&quot;https://enterpriseefiling.fcc.gov/dataentry/public/tv/publicFacilityTechDetails.html?facilityId=&quot;+ Name + &quot;&amp;applicationId=&quot; +  License_to_Cover_Filing_Number__c ,&quot;Contour Link&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to show Broadcaster Countour from the LMS/FCC data. Click to show the map. Will show Contour map if there is a map, and be blank if no contour info in lms yet.</inlineHelpText>
    <label>Contour Map (Broadcaster)</label>
    <type>Text</type>
</CustomField>