force-app/main/default/objects/Account/fields/Contract_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Executed_Date__c</fullName>
    <inlineHelpText>Date the contract was executed.  Auto-filled from the Broadcaster Deal via a process.</inlineHelpText>
    <label>Contract Executed Date</label>
    <type>Date</type>
</CustomField>