force-app/main/default/objects/Account/fields/Covid_19_Delay__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Delay__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Identifies station phase change or expected phase change due to Covid-19.</inlineHelpText>
    <label>Covid-19 Delay</label>
    <type>Checkbox</type>
</CustomField>