force-app/main/default/objects/Account/fields/CP_comments_and_Length_of_time_estimate__c.field-meta.xml
<CustomField>
    <fullName>CP_comments_and_Length_of_time_estimate__c</fullName>
    <inlineHelpText>Used to help gauge CP length- full 180 days, or a few days/weeks</inlineHelpText>
    <label>CP comments and Length of time estimate</label>
    <type>TextArea</type>
</CustomField>