force-app/main/default/objects/Account/fields/CP_construction_completed__c.field-meta.xml
<CustomField>
    <fullName>CP_construction_completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check if the Transition Progress Report FCC Filing shows the station has completed all work, and is fully moved.</inlineHelpText>
    <label>CP construction completed</label>
    <type>Checkbox</type>
</CustomField>