force-app/main/default/objects/Account/fields/CP_Construction_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>CP_Construction_Completed_Date__c</fullName>
    <label>CP Construction Completed Date</label>
    <type>Date</type>
</CustomField>